Minor OpenAPI correction
